package ma.emsi.defenseservice.enums;

public enum DefenseRequestStatus {
    DRAFT, SUBMITTED, PREREQUISITES_VALIDATION, DIRECTOR_VALIDATION,
    JURY_PROPOSED, JURY_VALIDATED, REPORTS_PENDING, REPORTS_RECEIVED,
    AUTHORIZED, SCHEDULED, COMPLETED, REJECTED
}

