package ma.emsi.defenseservice.enums;

public enum DefenseStatus {
    SCHEDULED, // Soutenance planifiée
    IN_PROGRESS, // En cours
    COMPLETED, // Terminée
    CANCELLED, // Annulée
    POSTPONED // Reportée
}
