package ma.emsi.defenseservice.enums;

public enum MemberRole {
    PRESIDENT, RAPPORTEUR, EXAMINATEUR, DIRECTEUR_THESE, CO_DIRECTEUR
}

