package ma.emsi.defenseservice.enums;

public enum MemberStatus {
    INVITED, ACCEPTED, DECLINED
}

