package ma.emsi.defenseservice.enums;

public enum Mention {
    TRES_HONORABLE_AVEC_FELICITATIONS,
    TRES_HONORABLE,
    HONORABLE,
    PASSABLE
}

